fix z-index panel

--- a/stylesheets/geo.css
+++ b/stylesheets/geo.css
@@ -1,7 +1,7 @@
 .panel{
     overflow-y: scroll;
     font-size: 1em; 
-    z-index: 9998;
+    z-index: 10000;
     height: 100%;
     min-width: 32%;
     display: none;
